--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "fastify": "^4.27.0",
     "@fastify/cors": "^9.0.0",
     "@fastify/jwt": "^8.0.0",
-    "bcryptjs": "^2.4.3",
+     "bcrypt": "^5.1.0",
     "dotenv": "^16.4.0",
     "prisma": "^5.10.0",
     "@prisma/client": "^5.10.0"
   }
 }
+
 
