--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 
 PORT=3000
 JWT_SECRET=supersecret
-DATABASE_URL="postgres://usuario:senha@host:5432/banco"
+DATABASE_URL=postgresql://agrocontrol_user:1hvxOueRrhpNx9wqgifjeinEO4M6ZjTQ@dpg-d69qsl1r0fns73892c5g-a.oregon-postgres.render.com/agrocontrol_eofk
